--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lucky Kick</title>
     <style>
+        html {
+            width: 100%;
+            height: 100%;
+        }
         body {
             margin: 0;
             padding: 0;
             overflow: hidden;
             background-image: url("assets/images/backgorund.png");
+            background-position-x: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+            width: 100%;
+            height: 100%;
+            position: absolute;
         }
         #game-container {
             width: 1220px;
