--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,8 @@
         canvas {
             display: block;
             margin: 0 auto;
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
