--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,  minimum-scale=1.0, initial-scale=1, maximum-scale=1, user-scalable=no, user-scalable=0">
+    <meta name="description" content="Lucky Kick">
     <title>Lucky Kick</title>
     <style>
         html {
             width: 100%;
             height: 100%;
+            left: 0;
+            top: 0;
         }
         body {
             margin: 0;
