--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,9 @@
       </div>
 
       <div id="deviceRotationLayer" style="width: 100%; height: 100%; background-image: url('./assets/img/rotate/bg.png'); background-position: center; background-size: cover; position: absolute; display: none;">
-        <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; position: relative;">
-          <div style="width: 45%; display: flex; justify-content: center; align-items: center;">
-            <img id="deviceRotationImg" class="rotate_device_anim" src="./assets/img/rotate/phone.png" style="width: 100%; backdrop-filter: blur(10px);">
+        <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; position: relative; ">
+          <div style="width: 41%; display: flex; justify-content: center; align-items: center; margin-top: 33%;">
+            <img id="deviceRotationImg" class="rotate_device_anim" src="./assets/img/rotate/phone.png" style="width: 100%; ">
           </div>
           <div style="position: absolute; width: 45%; display: flex; justify-content: center; align-items: center; margin-top: 20px;">
             <img class="scale_logo_anim" src="./assets/img/rotate/logo.png" style="width: 90%;">
